<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.jamk.basicui.MainActivity">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_one"
            android:id="@+id/radioButton"
            android:checked="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_two"
            android:id="@+id/radioButton2"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioButton"
            android:layout_alignParentLeft="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_three"
            android:id="@+id/radioButton3"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioButton2"
            android:layout_alignParentLeft="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_four"
            android:id="@+id/radioButton4"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioButton3"
            android:layout_alignParentLeft="true" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_select"
        android:id="@+id/button"
        android:layout_below="@+id/radioGroup"
        android:onClick="selectButtonClicked"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ui"
        android:onClick="uiButtonClicked"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
